--- a/ru/index.html
+++ b/ru/index.html
@@ -24,8 +24,8 @@
             <a class="logo-text" href="https://yuamble.org/ru">Yuamble</a>
             <div class="menu-header">
                 <a class="h-menu">Пользование Yuamble</a>
-                <a class="h-menu">Обучение</a>
-                <a href="../ru/developers" class="h-menu">Разработчикам</a>
+                <a href="learn" class="h-menu">Обучение</a>
+                <a href="developers" class="h-menu">Разработчикам</a>
             </div>
             <div class="hat_text">
                 <a id="hat" class="h-menu languages-text" href="/languages">
