--- a/languages/index.html
+++ b/languages/index.html
@@ -21,11 +21,11 @@
 <div style="margin: 0px auto; max-width: 1450px;">
 <div class="pre-header">
     <div class="header">
-        <a class="logo-text" href="https://yuamble.org/ru">Yuamble</a>
+        <a class="logo-text" href="https://yuamble.org">Yuamble</a>
         <div class="menu-header">
             <a class="h-menu">Use Yuamble</a>
             <a href="../learn" class="h-menu">Learn</a>
-            <a href="../developers" class="h-menu">Developers</a>
+            <a class="h-menu">Developers</a>
         </div>
         <div class="hat_text">
             <a id="hat" class="h-menu languages-text" href="">
@@ -39,7 +39,7 @@
     </div>
     <div class="mobile-menu">
         <a class="menu-mobile-text">Use Yuamble</a>
-        <a class="menu-mobile-text">Learn</a>
+        <a href="../learn" class="menu-mobile-text">Learn</a>
         <a class="menu-mobile-text">Developers</a>
         <a class="menu-mobile-text">Languages</a>
         <div>
