--- a/learn/index.html
+++ b/learn/index.html
@@ -21,7 +21,7 @@
 <div style="margin: 0px auto; max-width: 1450px;">
 <div class="pre-header">
     <div class="header">
-    <a class="logo-text" href="https://yuamble.org/ru">Yuamble</a>
+    <a class="logo-text" href="https://yuamble.org">Yuamble</a>
     <div class="menu-header">
         <a href="../use-yuamble" class="h-menu">Use Yuamble</a>
         <a href="../learn" class="h-menu">Learn</a>
@@ -38,10 +38,10 @@
     </div>
 </div>
 <div class="mobile-menu">
-    <a class="menu-mobile-text">Use Yuamble</a>
-    <a class="menu-mobile-text">Learn</a>
-    <a class="menu-mobile-text">Developers</a>
-    <a class="menu-mobile-text">Languages</a>
+    <a href="../use-yuamble" class="menu-mobile-text">Use Yuamble</a>
+    <a href="../learn" class="menu-mobile-text">Learn</a>
+    <a href="../developers" class="menu-mobile-text">Developers</a>
+    <a href="../languages" class="menu-mobile-text">Languages</a>
     <div>
         <a href="https://github.com/yuamble/new-yuamble-website" target="_blank" rel="noopener noreferrer" style="text-decoration: none">
             <svg stroke="currentColor" fill="white" stroke-width="0" viewBox="0 0 496 512" class="icon-link" height="36" width="36" xmlns="http://www.w3.org/2000/svg">
