--- a/ru/learn/index.html
+++ b/ru/learn/index.html
@@ -44,10 +44,10 @@
             </div>
         </div>
         <div class="mobile-menu">
-            <a class="menu-mobile-text">Пользование Yuamble</a>
-            <a class="menu-mobile-text">Обучение</a>
-            <a class="menu-mobile-text">Разработчикам</a>
-            <a class="menu-mobile-text">Языки</a>
+            <a href="../use-yuamble" class="menu-mobile-text">Пользование Yuamble</a>
+            <a href="" class="menu-mobile-text">Обучение</a>
+            <a href="../developers" class="menu-mobile-text">Разработчикам</a>
+            <a href="/languages" class="menu-mobile-text">Языки</a>
             <div>
                 <a href="https://github.com/yuamble/new-yuamble-website" target="_blank" rel="noopener noreferrer"
                    style="text-decoration: none">
