--- a/languages/index.html
+++ b/languages/index.html
@@ -58,6 +58,90 @@
         </div>
     </div>
 </div>
+<div class="block-1">
+    <a class="title-h">Language Support</a>
+    <a class="h2">Yuamble is a global project, and it is critical that ethereum.org is accessible to everyone, regardless of
+        their nationality or language. Our community has been working hard to make this vision a reality.</a>
+    <a class="h1">yuamble.org is available in the following languages:</a>
+</div>
+<div class="block-2">
+    <div class="table">
+        <form action="https://yuamble.org/ru">
+            <button class="button-lang">
+                    <div style="display: grid;">
+                        <!--                <img class="table-image" src="../assets/images/icons8-bank-100.png" alt="bank-icon">-->
+                        <a class="h-table-1">Russian</a>
+                        <a class="h-table-2">Русский</a>
+                    </div>
+            </button>
+        </form>
+        <form action="https://yuamble.org">
+            <button class="button-lang">                <div style="display: grid;">
+    <!--                <img class="table-image" src="../assets/images/icons8-маска-анонимуса-100.png" alt="bank-icon">-->
+                    <a class="h-table-1">English</a>
+                    <a class="h-table-2">English</a>
+                </div>
+            </button>
+        </form>
+<!--        <div class="table-in">-->
+<!--            <div style="display: grid;">-->
+<!--                <img class="table-image" src="../assets/images/icons8-blockchain-100.png" alt="bank-icon">-->
+<!--                <a class="h-table-1">A peer-to-peer network</a>-->
+<!--                <a class="h-table-2">Yuamble allows you to move money, or make agreements, directly with someone else.-->
+<!--                    You don't need to go through intermediary companies.</a>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="table-in">-->
+<!--            <div style="display: grid;">-->
+<!--                <img class="table-image" src="../assets/images/icons8-shield-100.png" alt="bank-icon">-->
+<!--                <a class="h-table-1">Censorship-resistant</a>-->
+<!--                <a class="h-table-2">No government or company has control over Yuamble. This decentralization makes-->
+<!--                    it nearly impossible for anyone to stop you from receiving payments or using services on Yuamble.</a>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="table-in">-->
+<!--            <div style="display: grid;">-->
+<!--                <img class="table-image" src="../assets/images/icons8-shopping-cart-100.png" alt="bank-icon">-->
+<!--                <a class="h-table-1">Commerce guarantees</a>-->
+<!--                <a class="h-table-2">Yuamble creates a more level playing field. Customers have a secure,-->
+<!--                    built-in guarantee that funds will only change hands if you provide what was agreed.-->
+<!--                    You don’t need large company clout to do business.</a>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="table-in">-->
+<!--            <div style="display: grid;">-->
+<!--                <img class="table-image" src="../assets/images/icons8-без-скрытых-платежей-100.png" alt="bank-icon">-->
+<!--                <a class="h-table-1">No commissions</a>-->
+<!--                <a class="h-table-2">This blockchain has no fees. The project was created for people, not for-->
+<!--                    profit.</a>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="table-in">-->
+<!--            <div style="display: grid;">-->
+<!--                <img class="table-image" src="../assets/images/icons8-planet-100.png" alt="bank-icon">-->
+<!--                <a class="h-table-1">Ecology comes first</a>-->
+<!--                <a class="h-table-2">Blockchain on Proof-of-Stake reduces carbon emissions. The planet won't wait.-->
+<!--                    Therefore, we act and create a project with the best technologies.</a>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="table-in">-->
+<!--            <div style="display: grid;">-->
+<!--                <img class="table-image" src="../assets/images/icons8-painting-100.png" alt="bank-icon">-->
+<!--                <a class="h-table-1">Create NFT, tokens and more</a>-->
+<!--                <a class="h-table-2">From auctions to perpetual royalties coded right into the NFT, Yuamble supports-->
+<!--                    a fully decentralized on-chain experience for artists and collectors.</a>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="table-in">-->
+<!--            <div style="display: grid;">-->
+<!--                <img class="table-image" src="../assets/images/icons8-отправлено-100.png" alt="bank-icon">-->
+<!--                <a class="h-table-1">Fast transactions</a>-->
+<!--                <a class="h-table-2">We have created a blockchain that works flawlessly. It instantly processes your-->
+<!--                    transactions when time costs money.</a>-->
+<!--            </div>-->
+<!--        </div>-->
+    </div>
+</div>
 </div>
 <script src="../index.js" rel="script"></script>
 </body>
