--- a/index.html
+++ b/index.html
@@ -4,28 +4,28 @@
     <meta charset="UTF-8">
     <title>Home | Yuamble</title>
     <meta name="Description" content="Yuamble is the world's first blockchain of smart contracts without fees, with Internet access, yuamba (YMB) cryptocurrency and decentralized applications." data-react-helmet="true">
-    <meta name="author" content="yuamble.org">
+    <meta name="author" content="yuamble.tk">
     <meta name="keywords" content="yuamble, yuamba, blockchain, crypto, currency">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Home | Yuamble"/>
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Home | Yuamble">
-    <meta property="og:image" content="https://yuamble.org/assets/images/favicon-32x32.png"/>
+    <meta property="og:image" content="https://yuamble.tk/assets/images/favicon-32x32.png"/>
     <meta property="og:description" content="Yuamble is the world's first blockchain of smart contracts without fees, with Internet access, yuamba (YMB) cryptocurrency and decentralized applications."/>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="stylesheet" href="stylesheet.css">
-    <link rel="icon" href="https://yuamble.org/favicon.ico">
-    <link rel="shortcut icon" href="https://yuamble.org/favicon.ico">
+    <link rel="icon" href="https://yuamble.tk/favicon.ico">
+    <link rel="shortcut icon" href="https://yuamble.tk/favicon.ico">
 </head>
 <body>
 <div style="margin: 0px auto; max-width: 1450px;">
     <div class="pre-header">
         <div class="header">
-            <a class="logo-text" href="https://yuamble.org/ru">Yuamble</a>
+            <a class="logo-text" href="https://yuamble.tk/ru">Yuamble</a>
             <div class="menu-header">
                 <a href="use-yuamble" class="h-menu">Use Yuamble</a>
                 <a href="learn" class="h-menu">Learn</a>
-                <a href="developers" class="h-menu">Developers</a>
+                <a href="en/developers" class="h-menu">Developers</a>
             </div>
             <div class="hat_text">
                 <a id="hat" class="h-menu languages-text" href="/languages">
@@ -74,14 +74,14 @@
         <br><br>
         <a class="h2-pre-title">Yuamble is the world's first blockchain of smart contracts without fees, with Internet access, yuamba (YMB) cryptocurrency and decentralized applications.</a>
         <br>
-        <button class="button"><a href="learn">Explore Yuamble</a></button>
+        <button class="button"><a href="en/what-is-yuamble">Explore Yuamble</a></button>
     </div>
 
     <div class="block-get-started">
         <div class="block-get-started-in-text">
             <a class="h1-block">Get started</a>
             <br><br>
-            <a class="h2-block">yuamble.org is your portal into the world of Yuamble. The tech is new and ever-evolving – it helps to have a guide. Here's what we recommend you do if you want to dive in.</a>
+            <a class="h2-block">yuamble.tk is your portal into the world of Yuamble. The tech is new and ever-evolving – it helps to have a guide. Here's what we recommend you do if you want to dive in.</a>
         </div>
         <img class="image-get-started" src="assets/images/n5m5knWRx31r04068o1.png">
     </div>
@@ -228,7 +228,7 @@
     <div class="block2">
         <div class="block-contribute">
             <div style="margin-top: auto; margin-bottom: auto; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
-                <a class="h1-block">Contribute to yuamble.org</a>
+                <a class="h1-block">Contribute to yuamble.tk</a>
                 <br><br>
                 <a class="h2-block">This website is open source with hundreds of community contributors. You can propose edits to any of the content on this site, suggest awesome new features, or help us squash bugs.</a>
                 <br>
