--- a/languages/index.html
+++ b/languages/index.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <title>Languages | Yuamble</title>
     <meta name="Description" content="Yuamble is the world's first blockchain of smart contracts without fees, with Internet access, yuamba (YMB) cryptocurrency and decentralized applications." data-react-helmet="true">
-    <meta name="author" content="yuamble.org">
+    <meta name="author" content="yuamble.tk">
     <meta name="keywords" content="yuamble, yuamba, blockchain, crypto, currency">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Languages | Yuamble"/>
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Languages | Yuamble">
-    <meta property="og:image" content="https://yuamble.org/assets/images/favicon-32x32.png"/>
+    <meta property="og:image" content="https://yuamble.tk/assets/images/favicon-32x32.png"/>
     <meta property="og:description" content="Yuamble is the world's first blockchain of smart contracts without fees, with Internet access, yuamba (YMB) cryptocurrency and decentralized applications."/>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="stylesheet" href="stylesheet.css">
-    <link rel="icon" href="https://yuamble.org/favicon.ico">
-    <link rel="shortcut icon" href="https://yuamble.org/favicon.ico">
+    <link rel="icon" href="https://yuamble.tk/favicon.ico">
+    <link rel="shortcut icon" href="https://yuamble.tk/favicon.ico">
 </head>
 <body>
 <div style="margin: 0px auto; max-width: 1450px;">
 <div class="pre-header">
     <div class="header">
-        <a class="logo-text" href="https://yuamble.org">Yuamble</a>
+        <a class="logo-text" href="https://yuamble.tk">Yuamble</a>
         <div class="menu-header">
             <a class="h-menu">Use Yuamble</a>
             <a href="../learn" class="h-menu">Learn</a>
@@ -39,7 +39,7 @@
     </div>
     <div class="mobile-menu">
         <a class="menu-mobile-text">Use Yuamble</a>
-        <a href="../learn" class="menu-mobile-text">Learn</a>
+        <a href="../en/what-is-yuamble" class="menu-mobile-text">Learn</a>
         <a class="menu-mobile-text">Developers</a>
         <a class="menu-mobile-text">Languages</a>
         <div>
@@ -62,11 +62,11 @@
     <a class="title-h">Language Support</a>
     <a class="h2">Yuamble is a global project, and it is critical that ethereum.org is accessible to everyone, regardless of
         their nationality or language. Our community has been working hard to make this vision a reality.</a>
-    <a class="h1">yuamble.org is available in the following languages:</a>
+    <a class="h1">yuamble.tk is available in the following languages:</a>
 </div>
 <div class="block-2">
     <div class="table">
-        <form action="https://yuamble.org/ru">
+        <form action="https://yuamble.tk/ru">
             <button class="button-lang">
                     <div style="display: grid;">
                         <!--                <img class="table-image" src="../assets/images/icons8-bank-100.png" alt="bank-icon">-->
@@ -75,7 +75,7 @@
                     </div>
             </button>
         </form>
-        <form action="https://yuamble.org">
+        <form action="https://yuamble.tk">
             <button class="button-lang">                <div style="display: grid;">
     <!--                <img class="table-image" src="../assets/images/icons8-маска-анонимуса-100.png" alt="bank-icon">-->
                     <a class="h-table-1">English</a>
