--- a/ru/developers/index.html
+++ b/ru/developers/index.html
@@ -4,24 +4,24 @@
     <meta charset="utf-8">
     <title>Ресурсы для разработчиков | Yuamble</title>
     <meta name="Description" content="Yuamble — это блокчейн смарт-контрактов, безопасного Интернета, криптовалюты yuamba (YMB) и тысяч децентрализованных приложений." data-react-helmet="true">
-    <meta name="author" content="yuamble.org">
+    <meta name="author" content="yuamble.tk">
     <meta name="keywords" content="юамбль, юамба, блокчейн, криптовалюта, крипто, валюта">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Ресурсы для разработчиков | Yuamble"/>
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Ресурсы для разработчиков | Yuamble">
-    <meta property="og:image" content="https://yuamble.org/assets/images/favicon-32x32.png"/>
+    <meta property="og:image" content="https://yuamble.tk/assets/images/favicon-32x32.png"/>
     <meta property="og:description" content="Yuamble — это блокчейн смарт-контрактов, безопасного Интернета, криптовалюты yuamba (YMB) и тысяч децентрализованных приложений."/>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 <!--    <link rel="stylesheet" href="/stylesheet.css">-->
-    <link rel="icon" href="https://yuamble.org/favicon.ico">
-    <link rel="shortcut icon" href="https://yuamble.org/favicon.ico">
+    <link rel="icon" href="https://yuamble.tk/favicon.ico">
+    <link rel="shortcut icon" href="https://yuamble.tk/favicon.ico">
 </head>
 <body>
 <div class="pre-block">
 <div class="block-out">
     <div class="header">
-        <a class="logo-text" href="https://yuamble.org/ru">Yuamble</a>
+        <a class="logo-text" href="https://yuamble.tk/ru">Yuamble</a>
         <div class="header-menu">
             <a>Пользование Yuamble</a>
             <a>Обучение</a>
