--- a/ru/index.html
+++ b/ru/index.html
@@ -4,27 +4,27 @@
     <meta charset="UTF-8">
     <title>Главная | Yuamble</title>
     <meta name="Description" content="Yuamble — это первый в мире блокчейн смарт-контрактов без комиссий, с выходом в Интернет, криптовалютой yuamba (YMB) и децентрализованными приложениями." data-react-helmet="true">
-    <meta name="author" content="yuamble.org">
+    <meta name="author" content="yuamble.tk">
     <meta name="keywords" content="юамбль, юамба, блокчейн, криптовалюта, крипто, валюта">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Главная | Yuamble"/>
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Главная | Yuamble">
-    <meta property="og:image" content="https://yuamble.org/assets/images/favicon-32x32.png"/>
+    <meta property="og:image" content="https://yuamble.tk/assets/images/favicon-32x32.png"/>
     <meta property="og:description" content="Yuamble — это первый в мире блокчейн смарт-контрактов без комиссий, с выходом в Интернет, криптовалютой yuamba (YMB) и децентрализованными приложениями."/>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="stylesheet" href="../stylesheet.css">
-    <link rel="icon" href="https://yuamble.org/favicon.ico">
-    <link rel="shortcut icon" href="https://yuamble.org/favicon.ico">
+    <link rel="icon" href="https://yuamble.tk/favicon.ico">
+    <link rel="shortcut icon" href="https://yuamble.tk/favicon.ico">
 </head>
 <body>
 <div style="margin: 0px auto; max-width: 1450px;">
     <div class="pre-header">
         <div class="header">
-            <a class="logo-text" href="https://yuamble.org/ru">Yuamble</a>
+            <a class="logo-text" href="https://yuamble.tk/ru">Yuamble</a>
             <div class="menu-header">
                 <a class="h-menu">Пользование Yuamble</a>
-                <a href="learn" class="h-menu">Обучение</a>
+                <a href="what-is-yuamble" class="h-menu">Обучение</a>
                 <a href="developers" class="h-menu">Разработчикам</a>
             </div>
             <div class="hat_text">
@@ -39,7 +39,7 @@
         </div>
         <div class="mobile-menu">
             <a class="menu-mobile-text">Пользование Yuamble</a>
-            <a href="learn" class="menu-mobile-text">Обучение</a>
+            <a href="what-is-yuamble" class="menu-mobile-text">Обучение</a>
             <a href="developers" class="menu-mobile-text">Разработчикам</a>
             <a href="../languages" class="menu-mobile-text">Языки</a>
             <div>
@@ -75,14 +75,14 @@
         <a class="h2-pre-title">Yuamble — это первый в мире блокчейн смарт-контрактов без комиссий, с выходом в Интернет,
             криптовалютой yuamba (YMB) и децентрализованными приложениями.</a>
         <br>
-        <button class="button"><a href="learn">Исследовать Yuamble</a></button>
+        <button class="button"><a href="what-is-yuamble">Исследовать Yuamble</a></button>
     </div>
 
     <div class="block-get-started">
         <div class="block-get-started-in-text">
             <a class="h1-block">Начнем</a>
             <br><br>
-            <a class="h2-block">yuamble.org — ваш портал в мир Yuamble. Технология новая, постоянно развивается. Хотите
+            <a class="h2-block">yuamble.tk — ваш портал в мир Yuamble. Технология новая, постоянно развивается. Хотите
                 узнать больше про Yuamble? Вот что мы рекомендуем вам просмотреть, если вы хотите погрузиться. 👇</a>
         </div>
         <img class="image-get-started" src="../assets/images/n5m5knWRx31r04068o1.png">
@@ -239,7 +239,7 @@
     <div class="block2">
         <div class="block-contribute">
             <div style="margin-top: auto; margin-bottom: auto; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
-                <a class="h1-block">Сделайте вклад в yuamble.org</a>
+                <a class="h1-block">Сделайте вклад в yuamble.tk</a>
                 <br><br>
                 <a class="h2-block">Этот веб-сайт с открытым исходным кодом и сотнями участников сообщества. Вы можете
                     предлагать изменения к любому контенту на этом сайте, предлагать новые функции или помогать нам устранять ошибки.</a>
@@ -276,27 +276,32 @@
         <div class="footer-div">
             <a class="h3">Пользование Yuamble</a>
             <ul>
-                <li class="li-footer"><a>Yuamble кошельки</a></li>
-                <li class="li-footer"><a>Получить Yuamble</a></li>
-                <li class="li-footer"><a>Децентрализованные приложения (dapps)</a></li>
-                <!-- <li class="li-footer"><a>Стейкинг Yuamble</a></li> -->
+                <li class="li-footer"><a href="../ru/wallets">Кошельки Yuamble</a></li>
+                <li class="li-footer"><a href="../ru/get-ymb">Получить Yuamble</a></li>
+                <li class="li-footer"><a href="../ru/dapps">Децентрализованные приложения (dapps)</a></li>
+                <li class="li-footer"><a href="../ru/nft">NFT (Невзаимозаменяемые токены)</a></li>
+                <li class="li-footer"><a href="../ru/staking">Вложить YMB</a></li>
             </ul>
         </div>
         <div class="footer-div">
             <a class="h3">Обучение</a>
             <ul>
-                <li class="li-footer"><a>Что такое Yuamble?</a></li>
-                <li class="li-footer"><a>Что такое Yuamba (YMB)</a></li>
-                <li class="li-footer"><a>Руководство и ресурсы</a></li>
-                <li class="li-footer"><a>Технический документ Yuamble</a></li>
+                <li class="li-footer"><a href="../ru/what-is-yuamble">Что такое Yuamble?</a></li>
+                <li class="li-footer"><a href="../ru/ymb">Что такое Yuamba (YMB)</a></li>
+                <li class="li-footer"><a href="../ru/stablecoins">Стейблкоины</a></li>
+                <li class="li-footer"><a href="../ru/smart-contracts">Смарт-контракты</a></li>
+                <li class="li-footer"><a href="../ru/defi">DeFi (Децентрализованные финансы)</a></li>
+                <li class="li-footer"><a href="../ru/learn">Руководство и ресурсы</a></li>
             </ul>
         </div>
         <div class="footer-div">
-            <a class="h3">Разработчики</a>
+            <a class="h3">Разработчикам</a>
             <ul>
-                <li class="li-footer"><a>Начать</a></li>
-                <li class="li-footer"><a>Документация</a></li>
-                <li class="li-footer"><a>Учебники</a></li>
+                <li class="li-footer"><a href="../ru/developers">Главная</a></li>
+                <li class="li-footer"><a href="../ru/developers/docs">Документация</a></li>
+                <li class="li-footer"><a href="../ru/developers/tutorials">Учебники</a></li>
+                <li class="li-footer"><a href="../ru/developers/run-node">Запустить свой узел Yuamble</a></li>
+                <li class="li-footer"><a href="../ru/developers/whitepaper">Технический документ Yuamble</a></li>
             </ul>
         </div>
     </footer>
