--- a/ru/what-is-yuamble/index.html
+++ b/ru/what-is-yuamble/index.html
@@ -6,25 +6,25 @@
     <meta name="Description"
           content="Yuamble is the world's first blockchain of smart contracts without fees, with Internet access, yuamba (YMB) cryptocurrency and decentralized applications."
           data-react-helmet="true">
-    <meta name="author" content="yuamble.org">
+    <meta name="author" content="yuamble.tk">
     <meta name="keywords" content="yuamble, yuamba, blockchain, crypto, currency">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Обучение | Yuamble"/>
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Обучение | Yuamble">
-    <meta property="og:image" content="https://yuamble.org/assets/images/favicon-32x32.png"/>
+    <meta property="og:image" content="https://yuamble.tk/assets/images/favicon-32x32.png"/>
     <meta property="og:description"
           content="Yuamble is the world's first blockchain of smart contracts without fees, with Internet access, yuamba (YMB) cryptocurrency and decentralized applications."/>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="stylesheet" href="../../learn/stylesheet.css">
-    <link rel="icon" href="https://yuamble.org/favicon.ico">
-    <link rel="shortcut icon" href="https://yuamble.org/favicon.ico">
+    <link rel="icon" href="https://yuamble.tk/favicon.ico">
+    <link rel="shortcut icon" href="https://yuamble.tk/favicon.ico">
 </head>
 <body>
 <div style="margin: 0px auto; max-width: 1450px;">
     <div class="pre-header">
         <div class="header">
-            <a class="logo-text" href="https://yuamble.org/ru">Yuamble</a>
+            <a class="logo-text" href="https://yuamble.tk/ru">Yuamble</a>
             <div class="menu-header">
                 <a href="../use-yuamble" class="h-menu">Пользование Yuamble</a>
                 <a href="" class="h-menu">Обучение</a>
@@ -185,7 +185,7 @@
                 </div>
             </div>
             <div class="table-in-2">
-                <img class="table-image-block-4" src="../../assets/images/Hero_Combo_Lockup_v2_копия.png" alt="bank-icon">
+                <img class="table-image-block-4" src="../../assets/images/wallet_ill.png" alt="bank-icon">
                 <div class="table-in-2-in">
                     <a class="h-table-1">Кошелек</a>
                     <a class="h-table-2">Это кошелек с автономным хранением, где вы полностью контролируете свою
