--- a/en/what-is-yuamble/index.html
+++ b/en/what-is-yuamble/index.html
@@ -4,31 +4,31 @@
     <meta charset="UTF-8">
     <title>Learn | Yuamble</title>
     <meta name="Description" content="Yuamble is the world's first blockchain of smart contracts without fees, with Internet access, yuamba (YMB) cryptocurrency and decentralized applications." data-react-helmet="true">
-    <meta name="author" content="yuamble.org">
+    <meta name="author" content="yuamble.tk">
     <meta name="keywords" content="yuamble, yuamba, blockchain, crypto, currency">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Learn | Yuamble"/>
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Learn | Yuamble">
-    <meta property="og:image" content="https://yuamble.org/assets/images/favicon-32x32.png"/>
+    <meta property="og:image" content="https://yuamble.tk/assets/images/favicon-32x32.png"/>
     <meta property="og:description" content="Yuamble is the world's first blockchain of smart contracts without fees, with Internet access, yuamba (YMB) cryptocurrency and decentralized applications."/>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="stylesheet" href="stylesheet.css">
-    <link rel="icon" href="https://yuamble.org/favicon.ico">
-    <link rel="shortcut icon" href="https://yuamble.org/favicon.ico">
+    <link rel="icon" href="https://yuamble.tk/favicon.ico">
+    <link rel="shortcut icon" href="https://yuamble.tk/favicon.ico">
 </head>
 <body>
 <div style="margin: 0px auto; max-width: 1450px;">
 <div class="pre-header">
     <div class="header">
-    <a class="logo-text" href="https://yuamble.org">Yuamble</a>
+    <a class="logo-text" href="https://yuamble.tk">Yuamble</a>
     <div class="menu-header">
-        <a href="../use-yuamble" class="h-menu">Use Yuamble</a>
-        <a href="../learn" class="h-menu">Learn</a>
+        <a href="../../use-yuamble" class="h-menu">Use Yuamble</a>
+        <a href="" class="h-menu">Learn</a>
         <a href="../developers" class="h-menu">Developers</a>
     </div>
     <div class="hat_text">
-        <a id="hat" class="h-menu languages-text" href="../languages">
+        <a id="hat" class="h-menu languages-text" href="../../languages">
         <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" class="icon-lang" height="24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm6.93 6h-2.95c-.32-1.25-.78-2.45-1.38-3.56 1.84.63 3.37 1.91 4.33 3.56zM12 4.04c.83 1.2 1.48 2.53 1.91 3.96h-3.82c.43-1.43 1.08-2.76 1.91-3.96zM4.26 14C4.1 13.36 4 12.69 4 12s.1-1.36.26-2h3.38c-.08.66-.14 1.32-.14 2 0 .68.06 1.34.14 2H4.26zm.82 2h2.95c.32 1.25.78 2.45 1.38 3.56-1.84-.63-3.37-1.9-4.33-3.56zm2.95-8H5.08c.96-1.66 2.49-2.93 4.33-3.56C8.81 5.55 8.35 6.75 8.03 8zM12 19.96c-.83-1.2-1.48-2.53-1.91-3.96h3.82c-.43 1.43-1.08 2.76-1.91 3.96zM14.34 14H9.66c-.09-.66-.16-1.32-.16-2 0-.68.07-1.35.16-2h4.68c.09.65.16 1.32.16 2 0 .68-.07 1.34-.16 2zm.25 5.56c.6-1.11 1.06-2.31 1.38-3.56h2.95c-.96 1.65-2.49 2.93-4.33 3.56zM16.36 14c.08-.66.14-1.32.14-2 0-.68-.06-1.34-.14-2h3.38c.16.64.26 1.31.26 2s-.1 1.36-.26 2h-3.38z"></path></svg>
             Languages
         </a>
@@ -38,10 +38,10 @@
     </div>
 </div>
 <div class="mobile-menu">
-    <a href="../use-yuamble" class="menu-mobile-text">Use Yuamble</a>
-    <a href="../learn" class="menu-mobile-text">Learn</a>
+    <a href="../../use-yuamble" class="menu-mobile-text">Use Yuamble</a>
+    <a href="" class="menu-mobile-text">Learn</a>
     <a href="../developers" class="menu-mobile-text">Developers</a>
-    <a href="../languages" class="menu-mobile-text">Languages</a>
+    <a href="../../languages" class="menu-mobile-text">Languages</a>
     <div>
         <a href="https://github.com/yuamble/new-yuamble-website" target="_blank" rel="noopener noreferrer" style="text-decoration: none">
             <svg stroke="currentColor" fill="white" stroke-width="0" viewBox="0 0 496 512" class="icon-link" height="36" width="36" xmlns="http://www.w3.org/2000/svg">
@@ -69,7 +69,7 @@
             <a class="h2">All you need is a wallet to take part.</a>
         </div>
     </div>
-    <img class="image-what-is" src="../assets/images/ba1a09131889293.619e19688bc06.png">
+    <img class="image-what-is" src="../../assets/images/ba1a09131889293.619e19688bc06.png">
 </div>
 <div class="block-1">
     <a class="h3-start block-1-text">Yuamble is open access to digital money and data-friendly services
@@ -81,7 +81,7 @@
     <div class="table">
         <div class="table-in">
             <div style="display: grid;">
-                <img class="table-image" src="../assets/images/icons8-bank-100.png" alt="bank-icon">
+                <img class="table-image" src="../../assets/images/icons8-bank-100.png" alt="bank-icon">
                 <a class="h-table-1">Banking for everyone</a>
                 <a class="h-table-2">Not everyone has access to financial services.
                     But all you need to access Yuamble and its lending, borrowing and savings products
@@ -90,7 +90,7 @@
         </div>
         <div class="table-in">
             <div style="display: grid;">
-                <img class="table-image" src="../assets/images/icons8-маска-анонимуса-100.png" alt="bank-icon">
+                <img class="table-image" src="../../assets/images/icons8-маска-анонимуса-100.png" alt="bank-icon">
                 <a class="h-table-1">A more private internet</a>
                 <a class="h-table-2">You don't need to provide all your personal details to use an Yuamble app.
                     Yuamble is building an economy based on value, not surveillance.</a>
@@ -98,7 +98,7 @@
         </div>
         <div class="table-in">
             <div style="display: grid;">
-                <img class="table-image" src="../assets/images/icons8-blockchain-100.png" alt="bank-icon">
+                <img class="table-image" src="../../assets/images/icons8-blockchain-100.png" alt="bank-icon">
                 <a class="h-table-1">A peer-to-peer network</a>
                 <a class="h-table-2">Yuamble allows you to move money, or make agreements, directly with someone else.
                     You don't need to go through intermediary companies.</a>
@@ -106,7 +106,7 @@
         </div>
         <div class="table-in">
             <div style="display: grid;">
-                <img class="table-image" src="../assets/images/icons8-shield-100.png" alt="bank-icon">
+                <img class="table-image" src="../../assets/images/icons8-shield-100.png" alt="bank-icon">
                 <a class="h-table-1">Censorship-resistant</a>
                 <a class="h-table-2">No government or company has control over Yuamble. This decentralization makes
                     it nearly impossible for anyone to stop you from receiving payments or using services on Yuamble.</a>
@@ -114,7 +114,7 @@
         </div>
         <div class="table-in">
             <div style="display: grid;">
-                <img class="table-image" src="../assets/images/icons8-shopping-cart-100.png" alt="bank-icon">
+                <img class="table-image" src="../../assets/images/icons8-shopping-cart-100.png" alt="bank-icon">
                 <a class="h-table-1">Commerce guarantees</a>
                 <a class="h-table-2">Yuamble creates a more level playing field. Customers have a secure,
                     built-in guarantee that funds will only change hands if you provide what was agreed.
@@ -123,7 +123,7 @@
         </div>
         <div class="table-in">
             <div style="display: grid;">
-                <img class="table-image" src="../assets/images/icons8-без-скрытых-платежей-100.png" alt="bank-icon">
+                <img class="table-image" src="../../assets/images/icons8-без-скрытых-платежей-100.png" alt="bank-icon">
                 <a class="h-table-1">No commissions</a>
                 <a class="h-table-2">This blockchain has no fees. The project was created for people, not for
                     profit.</a>
@@ -131,7 +131,7 @@
         </div>
         <div class="table-in">
             <div style="display: grid;">
-                <img class="table-image" src="../assets/images/icons8-planet-100.png" alt="bank-icon">
+                <img class="table-image" src="../../assets/images/icons8-planet-100.png" alt="bank-icon">
                 <a class="h-table-1">Ecology comes first</a>
                 <a class="h-table-2">Blockchain on Proof-of-Stake reduces carbon emissions. The planet won't wait.
                     Therefore, we act and create a project with the best technologies.</a>
@@ -139,7 +139,7 @@
         </div>
         <div class="table-in">
             <div style="display: grid;">
-                <img class="table-image" src="../assets/images/icons8-painting-100.png" alt="bank-icon">
+                <img class="table-image" src="../../assets/images/icons8-painting-100.png" alt="bank-icon">
                 <a class="h-table-1">Create NFT, tokens and more</a>
                 <a class="h-table-2">From auctions to perpetual royalties coded right into the NFT, Yuamble supports
                     a fully decentralized on-chain experience for artists and collectors.</a>
@@ -147,7 +147,7 @@
         </div>
         <div class="table-in">
             <div style="display: grid;">
-                <img class="table-image" src="../assets/images/icons8-отправлено-100.png" alt="bank-icon">
+                <img class="table-image" src="../../assets/images/icons8-отправлено-100.png" alt="bank-icon">
                 <a class="h-table-1">Fast transactions</a>
                 <a class="h-table-2">We have created a blockchain that works flawlessly. It instantly processes your
                     transactions when time costs money.</a>
@@ -161,7 +161,7 @@
 <div class="block-4">
     <div class="table">
         <div class="table-in-2">
-            <img class="table-image-block-4" src="../assets/images/rocket-ymb.png" alt="bank-icon">
+            <img class="table-image-block-4" src="../../assets/images/rocket-ymb.png" alt="bank-icon">
             <div class="table-in-2-in">
                 <a class="h-table-1">YMB</a>
                 <a class="h-table-2">Yuamble's native cryptocurrency and equivalent to Ethereum.
@@ -169,7 +169,7 @@
             </div>
         </div>
         <div class="table-in-2">
-            <img class="table-image-block-4" src="../assets/images/Hero_Combo_Lockup_v2_копия.png" alt="bank-icon">
+            <img class="table-image-block-4" src="../../assets/images/wallet_ill.png" alt="bank-icon">
             <div class="table-in-2-in">
                 <a class="h-table-1">Wallet</a>
                 <a class="h-table-2">This is a wallet with self-storage, where you are in full control of your
@@ -178,7 +178,7 @@
             </div>
         </div>
         <div class="table-in-2">
-            <img class="table-image-block-4" src="../assets/images/nfts-ill.png" alt="bank-icon">
+            <img class="table-image-block-4" src="../../assets/images/nfts-ill.png" alt="bank-icon">
             <div class="table-in-2-in">
                 <a class="h-table-1">NFT</a>
                 <a class="h-table-2">Love your crypto collectibles? We love them too. Learn more
@@ -186,7 +186,7 @@
             </div>
         </div>
         <div class="table-in-2">
-            <img class="table-image-block-4" src="../assets/images/defi-ill.png" alt="bank-icon">
+            <img class="table-image-block-4" src="../../assets/images/defi-ill.png" alt="bank-icon">
             <div class="table-in-2-in">
                 <a class="h-table-1">DeFi</a>
                 <a class="h-table-2">Dive in DeFi — decentralized finance. With this tool you can borrow,
@@ -243,6 +243,6 @@
 </footer>
 
 </div>
-<script src="../index.js" rel="script"></script>
+<script src="../../index.js" rel="script"></script>
 </body>
 </html>
