--- a/ru/what-is-yuamble/index.html
+++ b/ru/what-is-yuamble/index.html
@@ -16,7 +16,7 @@
     <meta property="og:description"
           content="Yuamble is the world's first blockchain of smart contracts without fees, with Internet access, yuamba (YMB) cryptocurrency and decentralized applications."/>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <link rel="stylesheet" href="../../learn/stylesheet.css">
+    <link rel="stylesheet" href="../../en/what-is-yuamble/stylesheet.css">
     <link rel="icon" href="https://yuamble.tk/favicon.ico">
     <link rel="shortcut icon" href="https://yuamble.tk/favicon.ico">
 </head>
@@ -181,7 +181,7 @@
                 <div class="table-in-2-in">
                     <a class="h-table-1">YMB</a>
                     <a class="h-table-2">Родная криптовалюта Yuamble и эквивалент Ethereum. Вы можете использовать
-                        YMB в приложениях Yuamble или для отправки денежных средств или NFT друзьям и семье.</a>
+                        YMB в приложениях Yuamble или для отправки денежных средств или NFT друзьям и родным.</a>
                 </div>
             </div>
             <div class="table-in-2">
