--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 <br><br>
                 <a class="h2-block">Yuamble is a very promising cryptocurrency and offers great opportunities in the field of blockchain and decentralized finance. Find out with us how to get Yuamble.</a>
                 <br>
-                <button class="button-2">Получить Yuamble</button>
+                <button class="button-2">Get Yuamble</button>
             </div>
         </div>
     </div>
@@ -289,7 +289,7 @@
         </div>
     </footer>
 </div>
-<script src="/index.js" rel="script"></script>
+<script src="index.js" rel="script"></script>
 </body>
 </html>
 
