--- a/ru/index.html
+++ b/ru/index.html
@@ -58,7 +58,7 @@
             </div>
         </div>
     </div>
-    <img class="image-start" src="../assets/images/start-ymb-illustration-wide.png" alt="illustration of future with Yuamble">
+    <img class="image-start" src="../assets/images/start-ymb-illustration-wide-compressed.png" alt="illustration of future with Yuamble">
     <div class="text-h1-block1">
         <a class="h1-pre-title">Добро пожаловать в <div class="animation">
             <ul class="ul-word">
@@ -90,7 +90,7 @@
 
     <div class="block3">
         <div class="block3-in">
-            <img class="image-2 device-image" src="../assets/images/6219.png">
+            <img class="image-2 device-image" src="../assets/images/6219-compressed.png">
             <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
                 <a class="h1-block">В этом блокчейне нет комиссии. Даже скрытых</a>
                 <br><br>
@@ -99,13 +99,13 @@
                 <br>
                 <button class="button-2">Что такое блокчейн?</button>
             </div>
-            <img class="image-2 desktop-image" src="../assets/images/6219.png">
+            <img class="image-2 desktop-image" src="../assets/images/6219-compressed.png">
         </div>
     </div>
 
     <div class="block2">
         <div class="block2-in">
-            <img class="image-1" src="../assets/images/039bf262699271.5a986c977466f.png">
+            <img class="image-1" src="../assets/images/039bf262699271.5a986c977466f-compressed.png">
             <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
                 <a class="h1-block">Создавайте смарт-контракты и подключайтесь безопасно к Интернету</a>
                 <br><br>
@@ -119,20 +119,20 @@
 
     <div class="block3">
         <div class="block3-in">
-            <img class="image-2 device-image" src="../assets/images/abe31062699271.5a986c97787cf.png">
+            <img class="image-2 device-image" src="../assets/images/abe31062699271.5a986c97787cf-compressed.png">
             <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
                 <a class="h1-block">Сделайте мир более экологически чистым</a>
                 <br><br>
                 <a class="h2-block">Блокчейн Yuamble основан на алгоритме Proof-of-Stake (PoS), который приводит к
                     снижению затрат на электроэнергию по сравнению с майнингом, таким как Биткойн или Эфириум.</a>
             </div>
-            <img class="image-2 desktop-image" src="../assets/images/abe31062699271.5a986c97787cf.png">
+            <img class="image-2 desktop-image" src="../assets/images/abe31062699271.5a986c97787cf-compressed.png">
         </div>
     </div>
 
     <div class="block2">
         <div class="block2-in">
-            <img class="image-1" src="../assets/images/a64726_6acb574b97aa48709114ffe6b3c34d45_mv2.png">
+            <img class="image-1" src="../assets/images/a64726_6acb574b97aa48709114ffe6b3c34d45_mv2-compressed.png">
             <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
                 <a class="h1-block">Yuamble — это постквантовая криптовалюта</a>
                 <br><br>
@@ -146,7 +146,7 @@
 
     <div class="block3">
         <div class="block3-in">
-            <img class="image-2 device-image" src="../assets/images/a64726_0140d734554844bbafa2a5c1519582f2_mv2.png">
+            <img class="image-2 device-image" src="../assets/images/a64726_0140d734554844bbafa2a5c1519582f2_mv2-compressed.png">
             <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
                 <a class="h1-block">Блокчейн Yuamble на базе DAG</a>
                 <br><br>
@@ -155,13 +155,13 @@
                 <br>
                 <button class="button-2">Больше о технологии</button>
             </div>
-            <img class="image-2 desktop-image" src="../assets/images/a64726_0140d734554844bbafa2a5c1519582f2_mv2.png">
+            <img class="image-2 desktop-image" src="../assets/images/a64726_0140d734554844bbafa2a5c1519582f2_mv2-compressed.png">
         </div>
     </div>
 
     <div class="block2">
         <div class="block2-in">
-            <img class="image-1" src="../assets/images/0807d562699271.5a986c977528a.png">
+            <img class="image-1" src="../assets/images/0807d562699271.5a986c977528a-compressed.png">
             <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
                 <a class="h1-block">Yuamble — перспективная криптовалюта</a>
                 <br><br>
