--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
         </div>
     </div>
-    <img class="image-start" src="assets/images/start-ymb-illustration-wide.png" alt="illustration of future with Yuamble">
+    <img class="image-start" src="assets/images/start-ymb-illustration-wide-compressed.png" alt="illustration of future with Yuamble">
     <div class="text-h1-block1">
         <a class="h1-pre-title">Welcome to <div class="animation">
             <ul class="ul-word">
@@ -88,7 +88,7 @@
 
     <div class="block3">
         <div class="block3-in">
-            <img class="image-2 device-image" src="assets/images/6219.png">
+            <img class="image-2 device-image" src="assets/images/6219-compressed.png">
             <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
                 <a class="h1-block">This blockchain has no fees. Not even hidden ones</a>
                 <br><br>
@@ -96,13 +96,13 @@
                 <br>
                 <button class="button-2">What is blockchain?</button>
             </div>
-            <img class="image-2 desktop-image" src="assets/images/6219.png">
+            <img class="image-2 desktop-image" src="assets/images/6219-compressed.png">
         </div>
     </div>
 
     <div class="block2">
         <div class="block2-in">
-            <img class="image-1" src="assets/images/039bf262699271.5a986c977466f.png">
+            <img class="image-1" src="assets/images/039bf262699271.5a986c977466f-compressed.png">
             <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
                 <a class="h1-block">Make smart contracts and connect to public Internet</a>
                 <br><br>
@@ -115,19 +115,19 @@
 
     <div class="block3">
         <div class="block3-in">
-            <img class="image-2 device-image" src="assets/images/abe31062699271.5a986c97787cf.png">
+            <img class="image-2 device-image" src="assets/images/abe31062699271.5a986c97787cf-compressed.png">
             <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
                 <a class="h1-block">Create world more environmentally friendly</a>
                 <br><br>
                 <a class="h2-block">The Yuamble blockchain is based on a proof-of-stake (PoS) algorithm, which leads to a decrease in electricity costs compared to mining, like Bitcoin or Ethereum.</a>
             </div>
-            <img class="image-2 desktop-image" src="assets/images/abe31062699271.5a986c97787cf.png">
+            <img class="image-2 desktop-image" src="assets/images/abe31062699271.5a986c97787cf-compressed.png">
         </div>
     </div>
 
     <div class="block2">
         <div class="block2-in">
-            <img class="image-1" src="assets/images/a64726_6acb574b97aa48709114ffe6b3c34d45_mv2.png">
+            <img class="image-1" src="assets/images/a64726_6acb574b97aa48709114ffe6b3c34d45_mv2-compressed.png">
             <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
                 <a class="h1-block">Yuamble is a post-quantum cryptocurrency</a>
                 <br><br>
@@ -140,7 +140,7 @@
 
     <div class="block3">
         <div class="block3-in">
-            <img class="image-2 device-image" src="assets/images/a64726_0140d734554844bbafa2a5c1519582f2_mv2.png">
+            <img class="image-2 device-image" src="assets/images/a64726_0140d734554844bbafa2a5c1519582f2_mv2-compressed.png">
             <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
                 <a class="h1-block">Yuamble blockchain powered by DAG</a>
                 <br><br>
@@ -148,13 +148,13 @@
                 <br>
                 <button class="button-2">More about technology</button>
             </div>
-            <img class="image-2 desktop-image" src="assets/images/a64726_0140d734554844bbafa2a5c1519582f2_mv2.png">
+            <img class="image-2 desktop-image" src="assets/images/a64726_0140d734554844bbafa2a5c1519582f2_mv2-compressed.png">
         </div>
     </div>
 
     <div class="block2">
         <div class="block2-in">
-            <img class="image-1" src="assets/images/0807d562699271.5a986c977528a.png">
+            <img class="image-1" src="assets/images/0807d562699271.5a986c977528a-compressed.png">
             <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
                 <a class="h1-block">Yuamble is a promising cryptocurrency</a>
                 <br><br>
