--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div style="margin: 0px auto; max-width: 1450px;">
     <div class="pre-header">
         <div class="header">
-            <a class="logo-text" href="https://yuamble.tk/ru">Yuamble</a>
+            <a class="logo-text" href="https://yuamble.tk">Yuamble</a>
             <div class="menu-header">
                 <a href="use-yuamble" class="h-menu">Use Yuamble</a>
                 <a href="learn" class="h-menu">Learn</a>
