--- a/ru/index.html
+++ b/ru/index.html
@@ -91,7 +91,7 @@
     <div class="block3">
         <div class="block3-in">
             <img class="image-2 device-image" src="../assets/images/6219-compressed.png">
-            <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
+            <div class="pre-block">
                 <a class="h1-block">В этом блокчейне нет комиссии. Даже скрытых</a>
                 <br><br>
                 <a class="h2-block">Мы хотим упростить, а не усложнить проведение вами транзакций в вашем аккаунте.
@@ -106,7 +106,7 @@
     <div class="block2">
         <div class="block2-in">
             <img class="image-1" src="../assets/images/039bf262699271.5a986c977466f-compressed.png">
-            <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
+            <div class="pre-block">
                 <a class="h1-block">Создавайте смарт-контракты и подключайтесь безопасно к Интернету</a>
                 <br><br>
                 <a class="h2-block">Используйте мощные инструменты блокчейна для создания смарт-контрактов и обеспечения
@@ -120,7 +120,7 @@
     <div class="block3">
         <div class="block3-in">
             <img class="image-2 device-image" src="../assets/images/abe31062699271.5a986c97787cf-compressed.png">
-            <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
+            <div class="pre-block">
                 <a class="h1-block">Сделайте мир более экологически чистым</a>
                 <br><br>
                 <a class="h2-block">Блокчейн Yuamble основан на алгоритме Proof-of-Stake (PoS), который приводит к
@@ -133,7 +133,7 @@
     <div class="block2">
         <div class="block2-in">
             <img class="image-1" src="../assets/images/a64726_6acb574b97aa48709114ffe6b3c34d45_mv2-compressed.png">
-            <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
+            <div class="pre-block">
                 <a class="h1-block">Yuamble — это постквантовая криптовалюта</a>
                 <br><br>
                 <a class="h2-block">Протокол Yuamble использует схему одноразовой подписи Винтерница (W-OTS), основанную
@@ -147,7 +147,7 @@
     <div class="block3">
         <div class="block3-in">
             <img class="image-2 device-image" src="../assets/images/a64726_0140d734554844bbafa2a5c1519582f2_mv2-compressed.png">
-            <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
+            <div class="pre-block">
                 <a class="h1-block">Блокчейн Yuamble на базе DAG</a>
                 <br><br>
                 <a class="h2-block">С помощью направленного ациклического графа (DAG) блокчейн Yuamble обрабатывает
@@ -162,7 +162,7 @@
     <div class="block2">
         <div class="block2-in">
             <img class="image-1" src="../assets/images/0807d562699271.5a986c977528a-compressed.png">
-            <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
+            <div class="pre-block">
                 <a class="h1-block">Yuamble — перспективная криптовалюта</a>
                 <br><br>
                 <a class="h2-block">Yuamble очень перспективная криптовалюта и дает большие возможности в сфере блокчейна
@@ -238,7 +238,7 @@
     </div>
     <div class="block2">
         <div class="block-contribute">
-            <div style="margin-top: auto; margin-bottom: auto; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
+            <div class="pre-block-contribute">
                 <a class="h1-block">Сделайте вклад в yuamble.tk</a>
                 <br><br>
                 <a class="h2-block">Этот веб-сайт с открытым исходным кодом и сотнями участников сообщества. Вы можете
