--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <div class="block3">
         <div class="block3-in">
             <img class="image-2 device-image" src="assets/images/6219-compressed.png">
-            <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
+            <div class="pre-block">
                 <a class="h1-block">This blockchain has no fees. Not even hidden ones</a>
                 <br><br>
                 <a class="h2-block">We want to make it easier to pay down your balance, not harder. So Yuamble doesn’t have any fees. Really. Blockchain should work for you, not against you.</a>
@@ -103,7 +103,7 @@
     <div class="block2">
         <div class="block2-in">
             <img class="image-1" src="assets/images/039bf262699271.5a986c977466f-compressed.png">
-            <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
+            <div class="pre-block">
                 <a class="h1-block">Make smart contracts and connect to public Internet</a>
                 <br><br>
                 <a class="h2-block">Use powerful blockchain tools to create smart contracts and secure their interaction with the outside world - the Internet.</a>
@@ -116,7 +116,7 @@
     <div class="block3">
         <div class="block3-in">
             <img class="image-2 device-image" src="assets/images/abe31062699271.5a986c97787cf-compressed.png">
-            <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
+            <div class="pre-block">
                 <a class="h1-block">Create world more environmentally friendly</a>
                 <br><br>
                 <a class="h2-block">The Yuamble blockchain is based on a proof-of-stake (PoS) algorithm, which leads to a decrease in electricity costs compared to mining, like Bitcoin or Ethereum.</a>
@@ -128,7 +128,7 @@
     <div class="block2">
         <div class="block2-in">
             <img class="image-1" src="assets/images/a64726_6acb574b97aa48709114ffe6b3c34d45_mv2-compressed.png">
-            <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
+            <div class="pre-block">
                 <a class="h1-block">Yuamble is a post-quantum cryptocurrency</a>
                 <br><br>
                 <a class="h2-block">The Yuamble protocol uses the Winternitz One-Time Signature Scheme (W-OTS), based on quantum-resistant hash functions.</a>
@@ -141,7 +141,7 @@
     <div class="block3">
         <div class="block3-in">
             <img class="image-2 device-image" src="assets/images/a64726_0140d734554844bbafa2a5c1519582f2_mv2-compressed.png">
-            <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
+            <div class="pre-block">
                 <a class="h1-block">Yuamble blockchain powered by DAG</a>
                 <br><br>
                 <a class="h2-block">With the Directed Acyclic Graph (DAG), the Yuamble blockchain processes transactions hundreds of times faster than Bitcoin or Ethereum.</a>
@@ -155,7 +155,7 @@
     <div class="block2">
         <div class="block2-in">
             <img class="image-1" src="assets/images/0807d562699271.5a986c977528a-compressed.png">
-            <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
+            <div class="pre-block">
                 <a class="h1-block">Yuamble is a promising cryptocurrency</a>
                 <br><br>
                 <a class="h2-block">Yuamble is a very promising cryptocurrency and offers great opportunities in the field of blockchain and decentralized finance. Find out with us how to get Yuamble.</a>
@@ -227,7 +227,7 @@
     </div>
     <div class="block2">
         <div class="block-contribute">
-            <div style="margin-top: auto; margin-bottom: auto; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
+            <div class="pre-block-contribute">
                 <a class="h1-block">Contribute to yuamble.tk</a>
                 <br><br>
                 <a class="h2-block">This website is open source with hundreds of community contributors. You can propose edits to any of the content on this site, suggest awesome new features, or help us squash bugs.</a>
